# CAMD

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.rst  pylintrc  pyproject.toml  pytest.ini
camdweb/: __init__.py  bandstructure.py  base.html  cli.py  filter.py  html.py  index.html  loop.py  material.html  material.py  materials.py  monitor.py  paging.py  panel.html  panel_element.html  parse.py  popover.html  session.py  sidebar.html  sidebar_element.html  subpanel.html  table.html  tools.py  tui.py  utils.py  web.py
camdweb/bidb/: app.py  copy.py  stackings.py
camdweb/c2db/: app.py  asr_panel.py  bs_dos_bz_panel.py  convex_hull.py  copy.py  copy_files.py  datadump.py  emass.py  everything.py  migration.py  oqmd123.py  panel_descriptions.txt  polarizability.py  shift_current.py
camdweb/cmr/: app.py  lowdim.py  overview.html  projects.py
camdweb/crysp/: app.py  copy_files.py  crysp_panel.py
camdweb/optimade/: app.py  filter.py  v1.0.0.lark
camdweb/oqmd12345/: app.py  copy_files.py  oqmd_panel.py  utils.py
camdweb/panels/: atoms.py  bader.py  bandstructure.py  charge_neutrality.py  convex_hull.py  crystalsymmetry.py  defect_symmetry.py  dos.py  emass.py  misc.py  panel.py  shift_current.py  slater_janak.py  structureinfo.py
camdweb/qpod/: app.py  copy_files.py
camdweb/test/: app_test.py  atoms_test.py  bandstructure_test.py  bidb_test.py  c2db.py  c2db_test.py  cli_test.py  cmr.py  cmr_test.py  convex_hull_test.py  emass_test.py  html.py  index_test.py  materials_test.py  misc_test.py  optimade_test.py  oqmd12345_test.py  qpod_test.py  session_test.py  utils_test.py
camdweb/test/gpaw/: symmetry.py
cxdb/: asr_panel.py  atoms.py  bader.py  bidb.py  c2db.py  cli.py  cmr.py  cmr_projects.py  crysp.py  dos.py  filter.py  help.html  html.py  index.html  loop.py  material.html  material.py  paging.py  panel.py  query.py  section.py  session.py  shift.py  subpanel.html  tui.py  utils.py  web.py
cxdb/bidb/: app.py
cxdb/c2db/: app.py  asr_panel.py  convex_hull.py  copy_files.py  oqmd123.py
cxdb/cmr/: app.py  lowdim.py  projects.py
cxdb/panels/: asr_panel.py  atoms.py  bader.py  convex_hull.py  dos.py  panel.py  shift_current.py
cxdb/test/: app_test.py  atoms_test.py  bidb_test.py  c2db.py  c2db_test.py  cli_test.py  cmr.py  cmr_test.py  convex_hull_test.py  index_test.py  materials_test.py  misc_test.py  session_test.py  utils_test.py
