[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cxdb"
description = "CAMd web-apps"
version = "24.1.0"
readme = "README.rst"
authors = [
  { name="Jens Jørgen Mortensen", email="jjmo@dtu.dk" },
]
dependencies = [
    "bottle",
    "textual",
    "plotly",
    "ase",
    "asr"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
cxdb = "cxdb.cli:main"

[tool.mypy]
packages = "cxdb"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    "if TYPE_CHECKING:"]
