[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cxdb"
description = "CAMd web-apps"
version = "24.1.0"
readme = "README.rst"
authors = [
  { name="CAMd web-team", email="jjmo@dtu.dk" },
]
dependencies = [
    "bottle",
    "textual",
    "plotly",
    "ase",
    "asr"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
cxdb = "cxdb.cli:main"

[project.optional-dependencies]
test = [
    "flake8",
    "mypy",
    "coverage",
    "pytest",
    "boddle"]

[tool.mypy]
packages = "cxdb"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.coverage.report]
source = ['cxdb']
exclude_also = [
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:"]
