[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "camdweb"
description = "CAMd web-apps"
version = "24.1.0"
readme = "README.rst"
authors = [
  { name="CAMd web-team", email="jjmo@dtu.dk" },
]
dependencies = [
    "bottle",
    "textual",
    "plotly",
    "ase",
    "asr"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.scripts]
camd-web = "camdweb.cli:main"
camd-web-coverage = "camdweb.tools:coverage"

[project.optional-dependencies]
test = [
    "flake8",
    "mypy",
    "coverage",
    "pytest",
    "boddle"]
optimade = [
    "optimade>=0.22.2"]

[tool.mypy]
packages = "camdweb"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ['camdweb']

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:"]
